--- a/index.html
+++ b/index.html
@@ -1,1 +1,169 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Lovern</title>
+
+<style>
+body{
+margin:0;
+font-family:Arial,Helvetica,sans-serif;
+background:linear-gradient(135deg,#060914,#140a2a,#070710);
+color:white;
+overflow-x:hidden;
+}
+
+/* боковые картинки */
+.side{
+position:fixed;
+top:0;
+height:100%;
+width:25%;
+background-size:cover;
+background-position:center;
+z-index:-1;
+opacity:0.9;
+}
+.left{left:0;background-image:url("left.png");}
+.right{right:0;background-image:url("right.png");}
+
+/* логотип */
+.logo{
+text-align:center;
+margin-top:40px;
+font-size:52px;
+font-weight:bold;
+background:linear-gradient(45deg,#4da6ff,#9b4dff,#ff4dc4);
+-webkit-background-clip:text;
+-webkit-text-fill-color:transparent;
+}
+
+/* меню */
+.menu{
+display:flex;
+flex-direction:column;
+align-items:center;
+gap:20px;
+margin-top:60px;
+}
+
+button{
+width:260px;
+padding:15px;
+font-size:18px;
+border-radius:14px;
+border:2px solid transparent;
+background:#151530;
+color:white;
+cursor:pointer;
+transition:.25s;
+}
+
+button:hover{
+border:2px solid #ff4dc4;
+box-shadow:0 0 20px #ff4dc4;
+transform:scale(1.04);
+}
+
+/* секции */
+.page{display:none;text-align:center;padding:40px;}
+.active{display:block;}
+
+/* кнопка назад */
+.back{
+margin-top:30px;
+}
+
+/* донат сетка */
+.priv{
+display:grid;
+grid-template-columns:repeat(2,1fr);
+gap:15px;
+max-width:500px;
+margin:30px auto;
+}
+
+/* медиа */
+.media{
+display:flex;
+flex-direction:column;
+gap:15px;
+align-items:center;
+}
+
+/* адаптив */
+@media(max-width:768px){
+.side{display:none;}
+.logo{font-size:38px;}
+}
+</style>
+</head>
+
+<body>
+
+<div class="side left"></div>
+<div class="side right"></div>
+
+<div class="logo">Lovern</div>
+
+<!-- главная -->
+<div id="home" class="page active">
+<div class="menu">
+<button onclick="show('about')">О нас</button>
+<button onclick="show('donate')">Донат</button>
+<button onclick="show('media')">Мы в медиа</button>
+</div>
+</div>
+
+<!-- о нас -->
+<div id="about" class="page">
+<h2>О нас</h2>
+<p>Тут будет информация о проекте Lovern</p>
+<button class="back" onclick="show('home')">Назад</button>
+</div>
+
+<!-- донат -->
+<div id="donate" class="page">
+<h2>Привилегии</h2>
+
+<div class="priv">
+<button>lovern</button>
+<button>lovern</button>
+<button>lovern</button>
+<button>lovern</button>
+<button>lovern</button>
+<button>lovern</button>
+<button>lovern</button>
+<button>lovern</button>
+<button>lovern</button>
+<button>lovern</button>
+</div>
+
+<button class="back" onclick="show('home')">Назад</button>
+</div>
+
+<!-- медиа -->
+<div id="media" class="page">
+<h2>Мы в медиа</h2>
+
+<div class="media">
+<button onclick="window.open('https://www.youtube.com/@lovern1-993','_blank')">Lovern YouTube</button>
+<button onclick="window.open('https://discord.gg/7hYHeUcMJD','_blank')">Lovern Discord</button>
+<button>lovern tg</button>
+<button>lovern tt</button>
+</div>
+
+<button class="back" onclick="show('home')">Назад</button>
+</div>
+
+<script>
+function show(id){
+document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
+document.getElementById(id).classList.add('active');
+}
+</script>
+
+</body>
+</html>
 
