--- a/index.html
+++ b/index.html
@@ -2,168 +2,175 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Lovern</title>
 
 <style>
+
 body{
 margin:0;
 font-family:Arial,Helvetica,sans-serif;
-background:linear-gradient(135deg,#060914,#140a2a,#070710);
+background:linear-gradient(135deg,#060018,#120030,#1a0045);
 color:white;
 overflow-x:hidden;
 }
 
-/* боковые картинки */
-.side{
+/* блёстки */
+body::after{
+content:"";
 position:fixed;
-top:0;
-height:100%;
-width:25%;
-background-size:cover;
-background-position:center;
-z-index:-1;
-opacity:0.9;
+inset:0;
+pointer-events:none;
+background-image:
+radial-gradient(2px 2px at 20% 30%,rgba(255,255,255,.15),transparent),
+radial-gradient(2px 2px at 70% 60%,rgba(255,255,255,.12),transparent),
+radial-gradient(2px 2px at 40% 80%,rgba(255,255,255,.1),transparent);
+animation:sparkle 6s infinite alternate;
 }
-.left{left:0;background-image:url("left.png");}
-.right{right:0;background-image:url("right.png");}
 
-/* логотип */
-.logo{
+@keyframes sparkle{
+from{opacity:.4}
+to{opacity:.9}
+}
+
+.container{
+display:flex;
+min-height:100vh;
+align-items:center;
+justify-content:space-between;
+}
+
+.side{
+width:28%;
+position:relative;
+display:flex;
+justify-content:center;
+}
+
+.side img{
+width:100%;
+max-width:420px;
+}
+
+/* мягкая аура */
+.side::after{
+content:"";
+position:absolute;
+top:0;
+bottom:0;
+width:140px;
+right:-40px;
+background:linear-gradient(90deg,rgba(10,0,30,0) 0%,rgba(10,0,30,.9) 100%);
+filter:blur(20px);
+}
+
+/* центр */
+.center{
+width:44%;
 text-align:center;
-margin-top:40px;
-font-size:52px;
-font-weight:bold;
-background:linear-gradient(45deg,#4da6ff,#9b4dff,#ff4dc4);
+padding:40px 20px;
+}
+
+.logo{
+font-size:64px;
+font-weight:700;
+background:linear-gradient(45deg,#5fb6ff,#a855ff,#ff4dff);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
-/* меню */
-.menu{
-display:flex;
-flex-direction:column;
-align-items:center;
-gap:20px;
-margin-top:60px;
-}
-
-button{
-width:260px;
-padding:15px;
-font-size:18px;
-border-radius:14px;
-border:2px solid transparent;
-background:#151530;
-color:white;
+.btn{
+display:block;
+margin:16px auto;
+padding:16px;
+max-width:320px;
+border-radius:16px;
+background:#15152f;
 cursor:pointer;
 transition:.25s;
 }
 
-button:hover{
-border:2px solid #ff4dc4;
-box-shadow:0 0 20px #ff4dc4;
-transform:scale(1.04);
+.btn:hover{
+box-shadow:0 0 0 2px #ff4dff;
 }
 
-/* секции */
-.page{display:none;text-align:center;padding:40px;}
-.active{display:block;}
-
-/* кнопка назад */
-.back{
+/* донаты */
+.priv-grid{
+display:grid;
+grid-template-columns:1fr 1fr;
+gap:16px;
 margin-top:30px;
 }
 
-/* донат сетка */
-.priv{
-display:grid;
-grid-template-columns:repeat(2,1fr);
-gap:15px;
-max-width:500px;
-margin:30px auto;
+.card{
+background:#15152f;
+padding:18px;
+border-radius:14px;
 }
 
-/* медиа */
-.media{
+/* телефон */
+@media(max-width:768px){
+
+.container{
+flex-direction:column;
+}
+
+.side{
+display:none;
+}
+
+.center{
+width:100%;
+}
+
+.priv-grid{
 display:flex;
 flex-direction:column;
-gap:15px;
-align-items:center;
 }
 
-/* адаптив */
-@media(max-width:768px){
-.side{display:none;}
-.logo{font-size:38px;}
+.logo{
+font-size:42px;
 }
+
+}
+
 </style>
 </head>
 
 <body>
 
-<div class="side left"></div>
-<div class="side right"></div>
+<div class="container">
+
+<div class="side">
+<img src="left.png">
+</div>
+
+<div class="center">
 
 <div class="logo">Lovern</div>
 
-<!-- главная -->
-<div id="home" class="page active">
-<div class="menu">
-<button onclick="show('about')">О нас</button>
-<button onclick="show('donate')">Донат</button>
-<button onclick="show('media')">Мы в медиа</button>
-</div>
-</div>
+<div class="btn">О нас</div>
+<div class="btn">Донат</div>
 
-<!-- о нас -->
-<div id="about" class="page">
-<h2>О нас</h2>
-<p>Тут будет информация о проекте Lovern</p>
-<button class="back" onclick="show('home')">Назад</button>
+<a href="https://www.youtube.com/@lovern1-993" target="_blank" class="btn">YouTube</a>
+<a href="https://discord.gg/7hYHeUcMJD" target="_blank" class="btn">Discord</a>
+
+<div class="priv-grid">
+<div class="card">lovern</div>
+<div class="card">lovern</div>
+<div class="card">lovern</div>
+<div class="card">lovern</div>
 </div>
 
-<!-- донат -->
-<div id="donate" class="page">
-<h2>Привилегии</h2>
+<div class="btn">Назад</div>
 
-<div class="priv">
-<button>lovern</button>
-<button>lovern</button>
-<button>lovern</button>
-<button>lovern</button>
-<button>lovern</button>
-<button>lovern</button>
-<button>lovern</button>
-<button>lovern</button>
-<button>lovern</button>
-<button>lovern</button>
 </div>
 
-<button class="back" onclick="show('home')">Назад</button>
+<div class="side">
+<img src="right.png">
 </div>
 
-<!-- медиа -->
-<div id="media" class="page">
-<h2>Мы в медиа</h2>
-
-<div class="media">
-<button onclick="window.open('https://www.youtube.com/@lovern1-993','_blank')">Lovern YouTube</button>
-<button onclick="window.open('https://discord.gg/7hYHeUcMJD','_blank')">Lovern Discord</button>
-<button>lovern tg</button>
-<button>lovern tt</button>
 </div>
-
-<button class="back" onclick="show('home')">Назад</button>
-</div>
-
-<script>
-function show(id){
-document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
-document.getElementById(id).classList.add('active');
-}
-</script>
 
 </body>
 </html>
-
