--- a/index.html
+++ b/index.html
@@ -6,161 +6,126 @@
 <title>Lovern</title>
 
 <style>
-*{box-sizing:border-box;margin:0;padding:0;font-family:Arial}
 
-body{
-background:
-radial-gradient(circle at 20% 30%,rgba(255,255,255,.05) 1px,transparent 1px),
-radial-gradient(circle at 80% 60%,rgba(255,255,255,.05) 1px,transparent 1px),
-linear-gradient(135deg,#060012,#14002a,#2a004d);
-background-size:300px 300px,400px 400px,cover;
-color:white;
-min-height:100vh;
-overflow-x:hidden;
-display:flex;
-justify-content:center;
-align-items:center;
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:Arial,Helvetica,sans-serif;
 }
 
-/* боковые картинки */
+body{
+background:#120022;
+color:white;
+overflow-x:hidden;
+}
+
+/* фон центр */
+.center{
+min-height:100vh;
+display:flex;
+align-items:center;
+justify-content:center;
+flex-direction:column;
+background:
+radial-gradient(circle at 30% 40%,rgba(255,255,255,.05) 1px,transparent 1px),
+radial-gradient(circle at 70% 60%,rgba(255,255,255,.05) 1px,transparent 1px),
+linear-gradient(180deg,#120022,#240046);
+background-size:200px 200px,240px 240px,100%;
+}
+
+/* картинки по бокам */
 .side{
 position:fixed;
 top:0;
-height:100%;
-width:320px;
-object-fit:cover;
-filter:brightness(.9);
+width:420px;
+height:100vh;
+background-size:cover;
+background-position:center;
+pointer-events:none;
 }
 
+/* ЛЕВО — теперь не режет */
 .left{
-left:-40px;
-mask-image:linear-gradient(to right,black 85%,transparent);
+left:-120px;
+background-image:url("left.png");
+mask-image:linear-gradient(to right,black 92%,transparent);
 }
 
+/* ПРАВО — меч видно */
 .right{
-right:-40px;
-mask-image:linear-gradient(to left,black 85%,transparent);
+right:-120px;
+background-image:url("right.png");
+mask-image:linear-gradient(to left,black 92%,transparent);
 }
 
-/* центр */
-.center{
-max-width:420px;
-width:90%;
-text-align:center;
-}
-
+/* заголовок */
 h1{
-font-size:48px;
+font-size:64px;
+color:#b983ff;
 margin-bottom:30px;
-background:linear-gradient(45deg,#6cf,#a6f,#ff66cc);
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
 }
 
 /* кнопки */
+.menu{
+display:flex;
+flex-direction:column;
+gap:18px;
+width:320px;
+}
+
 .btn{
-display:block;
-width:100%;
-padding:16px;
-margin:12px 0;
+background:#1b2340;
+padding:18px;
 border-radius:14px;
-background:#141b38;
-border:none;
-color:white;
-font-size:18px;
+text-align:center;
 cursor:pointer;
-transition:.25s;
+transition:.2s;
 }
 
 .btn:hover{
-box-shadow:0 0 0 2px #ff66cc,0 0 18px #ff66cc;
+transform:scale(1.05);
+background:#273163;
 }
 
-/* донаты */
-.grid{
-display:grid;
-grid-template-columns:1fr 1fr;
-gap:12px;
+/* мобилка */
+@media(max-width:900px){
+
+.side{
+display:none;
 }
 
-@media(max-width:700px){
-.side{display:none}
-.grid{grid-template-columns:1fr}
-h1{font-size:40px}
+h1{
+font-size:42px;
 }
 
-/* скрытые экраны */
-.screen{display:none}
-.active{display:block}
+.menu{
+width:90%;
+}
+
+}
+
 </style>
 </head>
+
 <body>
 
-<img src="left.png" class="side left">
-<img src="right.png" class="side right">
+<div class="side left"></div>
+<div class="side right"></div>
 
 <div class="center">
 
-<!-- ГЛАВНАЯ -->
-<div id="main" class="screen active">
 <h1>Lovern</h1>
-<button class="btn" onclick="show('about')">О нас</button>
-<button class="btn" onclick="show('donate')">Донат</button>
-<button class="btn" onclick="show('media')">Мы в медиа</button>
-</div>
 
-<!-- О НАС -->
-<div id="about" class="screen">
-<h1>О нас</h1>
-<p style="opacity:.7;margin-bottom:20px">
-Сервер Lovern. Добро пожаловать ❤️
-</p>
-<button class="btn" onclick="show('main')">Назад</button>
-</div>
+<div class="menu">
 
-<!-- МЕДИА -->
-<div id="media" class="screen">
-<h1>Мы в медиа</h1>
-
-<a href="https://www.youtube.com/@lovern1-993" target="_blank">
-<button class="btn">YouTube</button>
-</a>
-
-<a href="https://discord.gg/7hYHeUcMJD" target="_blank">
-<button class="btn">Discord</button>
-</a>
-
-<button class="btn" onclick="show('main')">Назад</button>
-</div>
-
-<!-- ДОНАТ -->
-<div id="donate" class="screen">
-<h1>Привилегии</h1>
-
-<div class="grid">
-<button class="btn">lovern</button>
-<button class="btn">lovern</button>
-<button class="btn">lovern</button>
-<button class="btn">lovern</button>
-<button class="btn">lovern</button>
-<button class="btn">lovern</button>
-<button class="btn">lovern</button>
-<button class="btn">lovern</button>
-<button class="btn">lovern</button>
-<button class="btn">lovern</button>
-</div>
-
-<button class="btn" onclick="show('main')">Назад</button>
-</div>
+<div class="btn">О нас</div>
+<div class="btn">Донат</div>
+<div class="btn">Мы в медиа</div>
 
 </div>
 
-<script>
-function show(id){
-document.querySelectorAll('.screen').forEach(s=>s.classList.remove('active'))
-document.getElementById(id).classList.add('active')
-}
-</script>
+</div>
 
 </body>
 </html>
