--- a/index.html
+++ b/index.html
@@ -46,59 +46,24 @@ pointer-events:none;
 z-index:1;
 }
 
+/* левый — мягкое исчезновение */
 .left{
 left:-40px;
 background-image:url("left.png");
 background-position:left center;
+
+mask-image:linear-gradient(to right,black 70%,transparent);
+-webkit-mask-image:linear-gradient(to right,black 70%,transparent);
 }
 
+/* правый — мягкое исчезновение */
 .right{
 right:-40px;
 background-image:url("right.png");
 background-position:right center;
-}
 
-/* обычный fade */
-.fade-left,
-.fade-right{
-position:fixed;
-top:0;
-width:220px;
-height:100vh;
-pointer-events:none;
-z-index:2;
-}
-
-.fade-left{
-left:0;
-background:linear-gradient(to right,#120022,transparent);
-}
-
-.fade-right{
-right:0;
-background:linear-gradient(to left,#120022,transparent);
-}
-
-/* 🔥 blur зона как ты просил */
-.blur-left,
-.blur-right{
-position:fixed;
-top:0;
-width:180px;
-height:100vh;
-pointer-events:none;
-z-index:3;
-backdrop-filter:blur(40px);
-}
-
-.blur-left{
-left:240px;
-background:linear-gradient(to right,rgba(18,0,34,.7),transparent);
-}
-
-.blur-right{
-right:240px;
-background:linear-gradient(to left,rgba(18,0,34,.7),transparent);
+mask-image:linear-gradient(to left,black 70%,transparent);
+-webkit-mask-image:linear-gradient(to left,black 70%,transparent);
 }
 
 /* заголовок */
@@ -106,7 +71,7 @@ h1{
 font-size:64px;
 color:#b983ff;
 margin-bottom:30px;
-z-index:4;
+z-index:3;
 }
 
 /* меню */
@@ -115,7 +80,7 @@ display:flex;
 flex-direction:column;
 gap:18px;
 width:320px;
-z-index:4;
+z-index:3;
 }
 
 .btn{
@@ -135,11 +100,7 @@ background:#273163;
 /* мобилка */
 @media(max-width:900px){
 
-.side,
-.fade-left,
-.fade-right,
-.blur-left,
-.blur-right{
+.side{
 display:none;
 }
 
@@ -160,12 +121,6 @@ width:90%;
 
 <div class="side left"></div>
 <div class="side right"></div>
-
-<div class="fade-left"></div>
-<div class="fade-right"></div>
-
-<div class="blur-left"></div>
-<div class="blur-right"></div>
 
 <div class="center">
 
